-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.995 2011-05-01 21:17:59 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-01	pwessel
	* job03.sh:		Replaced complicated awk scripting with gmtmath to ensure
				we get the common sampling range which changed by a tad
				due to the bug in project.
	* gmt_init.c:		New -b syntax to allow for mixed-type records on i/o.
	* gmt_io.c:		New binary i/o processing to allow separate types for each column.

2011-05-01	remko
	* test/grdview/icelandbox.sh:	New test case based on query by Peter Schmidt.
	* scripts/*.sh:		Replaced ". functions.sh" by ". ./functions.sh" to avoid problems
				with people who do not have . in their PATH. E.g., Ubuntu.

2011-04-29	remko
	* job04*.sh:		Made ex 4 and 4c more similar and rotated color bar.
	* grdview_func.c:	Removed grdview_init_setup because it produces unexpected results.

2011-04-28	remko
	* grdview_func.c:	Removed grdview_init_setup because it yields unpredictable
				results and prevends lineup of different 3D plots.

2011-04-28	pwessel
	* gmt_constants.h:	Declare and use GMT_BUFSIZ 4096 throughout.

2011-04-27	pwessel
	* gmt_map.c:		Store projected min/max in meters in current->rect_m[].
	* spotter/grdrotater_func.c:	Ensure that output grid xmin/xmax honors the current
				FORMAT_GEO_OUT range settings.
	* mapproject_func.c:	Used GMT_IN instead of GMT_OUT in output format of longitudes.
	* project_func.c:	Added modification -Gdist/lat to generate small circles of given
				lat that goes through points set by -C and -E.
				Bug: The original -G -T combination failed to produce great circles.

2011-04-27	remko
	* gmt_customio.c:	Now contains grid format descriptions and IDs.
	* Grdformat.txt, gmt_grdformats.h, grdinfo.h, grdreformat.h:	Removed, no longer needed.
	* gmt_grdio.c:		Better handling of grids off by 360 degrees in longitude.